Refactoring (#73)
* Refactor database schema for user roles and job management

- Updated the core users table to separate role-specific data into companies and freelancers tables.
- Removed user_type column and adjusted role constraints.
- Created companies and freelancers tables with relevant fields and constraints.
- Modified foreign key references in jobs, job_applications, projects, proposals, and contracts tables to link to the new companies and freelancers tables.
- Changed data types for salary and budget fields to NUMERIC for consistency.
- Added new fields and indexes to enhance performance and data integrity across the schema.

* update

* jobs: support company filter in getJobs and useJobs; fix jobs page header

* debug(jobs): log company query param and jobs result for filtering investigation

---------

Co-authored-by: Shahid Hussain <shahid.hussain@seb.se>